<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tutorial_parameter</name>
  <version>1.0.0</version>
  <description>This package is a tutorial for ros2 parameter</description>
  <maintainer email="miyalab.workspace@gmail.com">kmiyauchi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>  
  <depend>rclcpp</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
